# kubewaste

./: README.md  pyproject.toml
.github/workflows/: ci.yml
kubewaste/: __init__.py  analyzer.py  cli.py  models.py
tests/: test_models.py
